--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+:root {
+  /* --color-primary: '#7a5c1c';
+  --color-secondary: '#b88c3e';
+  --color-background: '#f5f5f5';
+  --color-text: '#333333';
+  --color-link: '#7a5c1c';
+  --color-heading: '#4a3a12';
+  --color-success: '#4caf50';
+  --color-danger: '#f44336'; */
+}
+
+button {
+  cursor: pointer;
+}
